add editor path

--- a/.gitconfig
+++ b/.gitconfig
@@ -18,9 +18,10 @@
 	excludesfile = /Users/schmiddi/.gitignore_global
   mergeoptions = "--no-edit"
 	precomposeunicode = false
+  editor = "/usr/local/bin/vim"
 [difftool "sourcetree"]
 	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
-	path = 
+	path =
 [mergetool "sourcetree"]
 	cmd = /Applications/SourceTree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
 	trustExitCode = true
