--- a/.gitconfig
+++ b/.gitconfig
@@ -14,6 +14,7 @@
   sm = submodule
   pl = pull --rebase
   ps = push
+  branches = for-each-ref --sort=-committerdate --format=\"%(color:blue)%(authordate:relative)\t%(color:red)%(authorname)\t%(color:white)%(color:bold)%(refname:short)\" refs/remotes
 [core]
 	excludesfile = /Users/schmiddi/.gitignore_global
   mergeoptions = "--no-edit"
@@ -26,7 +27,7 @@
 	cmd = /Applications/SourceTree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
 	trustExitCode = true
 [push]
-	default = simple
+	default = current
 [color]
 	ui = auto
 	branch = auto
@@ -35,3 +36,9 @@
 	status = auto
 	ui = true
 	ui = true
+[rebase]
+  autosquash = true
+[fetch]
+  prune = true
+[merge]
+  ff = only
