--- a/.gitconfig
+++ b/.gitconfig
@@ -15,6 +15,7 @@
   pl = pull --rebase
   ps = push
   branches = for-each-ref --sort=-committerdate --format=\"%(color:blue)%(authordate:relative)\t%(color:red)%(authorname)\t%(color:white)%(color:bold)%(refname:short)\" refs/remotes
+  nuke = !sh -c 'git branch -D $1 && git push origin :$1' -
 [core]
 	excludesfile = /Users/schmiddi/.gitignore_global
   mergeoptions = "--no-edit"
