--- a/.my.cnf
+++ b/.my.cnf
@@ -37,7 +37,7 @@ myisam_sort_buffer_size = 64M
 thread_cache_size = 8
 query_cache_size= 16M
 # Try number of CPU's*2 for thread_concurrency
-thread_concurrency = 16
+# thread_concurrency = 16
 
 # Don't listen on a TCP/IP port at all. This can be a security enhancement,
 # if all processes that need to connect to mysqld run on the same host.
