--- a/.bash_config
+++ b/.bash_config
@@ -3,4 +3,4 @@ unset MAILCHECK
 PS1="🍺  \[\033[1;31m\]\h \[\033[1;34m\]\W\[\033[0m\]\[\033[1;34m\] #\[\033[0m\] "
 
 HISTFILESIZE=10000
-export HISTCONTROL=ignoredups
+export HISTCONTROL=ignoredups:ignorespace
