--- a/.my.cnf
+++ b/.my.cnf
@@ -36,6 +36,7 @@ read_rnd_buffer_size = 40M
 myisam_sort_buffer_size = 64M
 thread_cache_size = 8
 query_cache_size= 16M
+open_files_limit=5000
 # Try number of CPU's*2 for thread_concurrency
 # thread_concurrency = 16
 
