Remove MySQL pw

--- a/.my.cnf
+++ b/.my.cnf
@@ -16,7 +16,7 @@
 # The following options will be passed to all MySQL clients
 [client]
 user 		= root
-password	= devel
+password	=
 port		= 3306
 socket		= /tmp/mysql.sock
 
