--- a/.gitconfig
+++ b/.gitconfig
@@ -15,6 +15,7 @@
   ps = push
   branches = for-each-ref --sort=-committerdate --format=\"%(color:blue)%(authordate:relative)\t%(color:red)%(authorname)\t%(color:white)%(color:bold)%(refname:short)\" refs/remotes
   nuke = !sh -c 'git branch -D $1 && git push --no-verify origin :$1' -
+  gone = !git pl && git fetch -p && git branch -vv | grep 'origin/.*: gone]' | awk '{print $1}' | xargs git branch -d
 [core]
 	excludesfile = /Users/schmiddi/.gitignore_global
   mergeoptions = "--no-edit"
