--- a/.gitconfig
+++ b/.gitconfig
@@ -13,6 +13,7 @@
   sm = submodule
   pl = pull --rebase
   ps = push
+  pf = push --force-with-lease
   branches = for-each-ref --sort=-committerdate --format=\"%(color:blue)%(authordate:relative)\t%(color:red)%(authorname)\t%(color:white)%(color:bold)%(refname:short)\" refs/remotes
   nuke = !sh -c 'git branch -D $1 && git push --no-verify origin :$1' -
   gone = !git pl && git fetch -p && git branch -vv | grep 'origin/.*: gone]' | awk '{print $1}' | xargs git branch -d
